Edit resume link and fix overflow x hidden

--- a/src/App.scss
+++ b/src/App.scss
@@ -113,7 +113,6 @@ section {
   justify-content: center;
   min-height: 100vh;
   scroll-snap-align: start;
-  overflow-x: hidden;
 }
 
 ul {
